--- a/weblayout/16_knowledge-base/index.html
+++ b/weblayout/16_knowledge-base/index.html
@@ -127,12 +127,12 @@
       </div>
     </div>
   </div>
-  <script src="node_modules/inputmask/dist/inputmask.min.js"></script>
+  <script src="js/inputmask.min.js"></script>
   <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
